vlib/v/parser/tests/fn_call_unexpected_eof_rpar_multi_line_err.vv
println('foo' bar
println('baz')

